--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,131 +5,131 @@ IMPRESS.JS BASIC STYLES
 */
 
 html {
-	overflow: hidden;
+    overflow: hidden;
 }
 
 body {
-	font-family: 'Open Sans', sans-serif;
-	line-height: 40px;
-	font-size: 32px;
-	min-height: 740px;
-	pointer-events: none;	/* Disables click events in body */
+    font-family: 'Open Sans', sans-serif;
+    line-height: 40px;
+    font-size: 32px;
+    min-height: 740px;
+    pointer-events: none; /* Disables click events in body */
 }
 
 .step {
-	width: 1060px;
-	padding: 0 0 40px 0;
-		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		-ms-box-sizing: border-box;
-		-o-box-sizing: border-box;
-	box-sizing: border-box;
-		-webkit-transition: opacity 1s;
-		-moz-transition: opacity 1s;
-		-ms-transition: opacity 1s;
-		-o-transition: opacity 1s;
-	transition: opacity 1s;
+    width: 1060px;
+    padding: 0 0 40px 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transition: opacity 1s;
+    -moz-transition: opacity 1s;
+    -ms-transition: opacity 1s;
+    -o-transition: opacity 1s;
+    transition: opacity 1s;
 }
 
 .impress-enabled .step {
-	margin: 0;
-	opacity: 0.3;
-		-webkit-transition: opacity 1s;
-		-moz-transition: opacity 1s;
-		-ms-transition: opacity 1s;
-		-o-transition: opacity 1s;
-	transition: opacity 1s;
+    margin: 0;
+    opacity: 0.3;
+    -webkit-transition: opacity 1s;
+    -moz-transition: opacity 1s;
+    -ms-transition: opacity 1s;
+    -o-transition: opacity 1s;
+    transition: opacity 1s;
 }
 
 .step:not(.active),
 .substep:not(.active) {
-	opacity: 0.0;
+    opacity: 0.0;
 }
 
 .impress-enabled .step.active,
 .impress-enabled .substep.active {
-	opacity: 1;
+    opacity: 1;
 }
 
 /* FALLBACK MESSAGE */
 
 .fallback-message {
-	font-family: sans-serif;
-	line-height: 1.3;
-	width: 780px;
-	padding: 10px 10px 0;
-	margin: 20px auto;
-	border: 1px solid #e1e1e1;
-	border-radius: 10px;
-	background: #f1f1f1;
+    font-family: sans-serif;
+    line-height: 1.3;
+    width: 780px;
+    padding: 10px 10px 0;
+    margin: 20px auto;
+    border: 1px solid #e1e1e1;
+    border-radius: 10px;
+    background: #f1f1f1;
 }
 
 .fallback-message p {
-	margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .impress-supported .fallback-message {
-	display: none;
+    display: none;
 }
 
 /* SLIDE NUMBERS */
 
 #slide-div {
-	position: absolute;
-	bottom: 15px;
-	right: 15px;
-	padding: 10px 2px;
-	margin-left: 0;
-	margin-top: 0;
-	height: 10px;
-	width: 80px;
+    position: absolute;
+    bottom: 15px;
+    right: 15px;
+    padding: 10px 2px;
+    margin-left: 0;
+    margin-top: 0;
+    height: 10px;
+    width: 80px;
 }
 
 #slide-text {
-	bottom: 0px;
-	font-size: 12px;
-	text-align: center;
-	color: #C0C0C0;
+    bottom: 0px;
+    font-size: 12px;
+    text-align: center;
+    color: #C0C0C0;
 }
 
 .slide-div-1 {
-	display: none;
+    display: none;
 }
 
 /* SCALING, POSITIONING, POINTER EVENTS FOR CURRENT SLIDE */
 
 .present .positioning {
-		-webkit-transform: translateY(-10px);
-		-moz-transform: translateY(-10px);
-		-ms-transform: translateY(-10px);
-		-o-transform: translateY(-10px);
-	transform: translateY(-10px);
+    -webkit-transform: translateY(-10px);
+    -moz-transform: translateY(-10px);
+    -ms-transform: translateY(-10px);
+    -o-transform: translateY(-10px);
+    transform: translateY(-10px);
 }
 
 .present .rotating {
-		-webkit-transform: rotate(-10deg);
-		-moz-transform: rotate(-10deg);
-		-ms-transform: rotate(-10deg);
-		-o-transform: rotate(-10deg);
-	transform: rotate(-10deg);
-		-webkit-transition-delay: 0.25s;
-		-moz-transition-delay: 0.25s;
-		-ms-transition-delay: 0.25s;
-		-o-transition-delay: 0.25s;
-	transition-delay: 0.25s;
+    -webkit-transform: rotate(-10deg);
+    -moz-transform: rotate(-10deg);
+    -ms-transform: rotate(-10deg);
+    -o-transform: rotate(-10deg);
+    transform: rotate(-10deg);
+    -webkit-transition-delay: 0.25s;
+    -moz-transition-delay: 0.25s;
+    -ms-transition-delay: 0.25s;
+    -o-transition-delay: 0.25s;
+    transition-delay: 0.25s;
 }
 
 .present .scaling {
-		-webkit-transform: scale(0.7);
-		-moz-transform: scale(0.7);
-		-ms-transform: scale(0.7);
-		-o-transform: scale(0.7);
-	transform: scale(0.7);
-		-webkit-transition-delay: 0.5s;
-		-moz-transition-delay: 0.5s;
-		-ms-transition-delay: 0.5s;
-		-o-transition-delay: 0.5s;
-	transition-delay: 0.5s;
+    -webkit-transform: scale(0.7);
+    -moz-transform: scale(0.7);
+    -ms-transform: scale(0.7);
+    -o-transform: scale(0.7);
+    transform: scale(0.7);
+    -webkit-transition-delay: 0.5s;
+    -moz-transition-delay: 0.5s;
+    -ms-transition-delay: 0.5s;
+    -o-transition-delay: 0.5s;
+    transition-delay: 0.5s;
 }
 
 /* ENABLE POINTER EVENTS ON SPECIAL ELEMENTS */
@@ -146,7 +146,7 @@ body {
 .present .ct-container:hover,
 .present .hljs,
 .mfp-close {
-	pointer-events: auto;
+    pointer-events: auto;
 }
 
 /*
@@ -156,124 +156,131 @@ BASIC TYPOGRAPHY
 */
 
 h1 {
-	font-size: 100px;
+    font-size: 100px;
 }
 
 h2 {
-	font-size: 48px;
-	letter-spacing: 0.1em;
-	text-transform: uppercase;
+    font-size: 48px;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
 }
 
 h6 {
-	font-size: 18px;
+    font-size: 18px;
 }
 
 p {
-	line-height: 1.5;
+    line-height: 1.5;
 }
 
 a {
-	pointer-events: none;
-	text-decoration: none;
-	color: #1e88e5;
-	font-weight: bold;
+    pointer-events: none;
+    text-decoration: none;
+    color: #1e88e5;
+    font-weight: bold;
 }
 
-a:link, a:hover, a:focus, a:visited {
-	color: #1e88e5;
+a:link,
+a:hover,
+a:focus,
+a:visited {
+    color: #1e88e5;
 }
 
 strong {
-	font-weight: 800;
+    font-weight: 800;
 }
 
 em {
-	font-style: italic;
+    font-style: italic;
 }
 
-sub, sup {
-	font-size: 75%;
-	line-height: 0;
-	position: relative;
-	vertical-align: baseline;
+sub,
+sup {
+    font-size: 75%;
+    line-height: 0;
+    position: relative;
+    vertical-align: baseline;
 }
 
 sup {
-	top: -0.5em;
+    top: -0.5em;
 }
 
 sub {
-	bottom: -0.5em;
+    bottom: -0.5em;
 }
 
-ol, ul {
-	margin: 0 0 20px 40px;
-	line-height: 1;
+ol,
+ul {
+    margin: 0 0 20px 40px;
+    line-height: 1;
 }
 
-ol ol, ul ul {
-	margin-left: 10px;
+ol ol,
+ul ul {
+    margin-left: 10px;
 }
 
 ol {
-	counter-reset: section;
+    counter-reset: section;
 }
 
 li {
-	position: relative;
-	list-style-type: none;
-	counter-increment: section;
-	padding-left: 1em;
+    position: relative;
+    list-style-type: none;
+    counter-increment: section;
+    padding-left: 1em;
 }
 
 li:before {
-	position: absolute;
-	left: -0.25em;
-	color: #C00000;
+    position: absolute;
+    left: -0.25em;
+    color: #C00000;
 }
 
 ul li:before {
-	content: "▸";
+    content: "▸";
 }
 
 ol li:before {
-	content: counters(section,".")".";
+    content: counters(section, ".") ".";
 }
 
 ol ol li {
-	padding-left: 2em;
+    padding-left: 2em;
 }
 
 dl {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 dt {
-	font-weight: 800;
-	margin-bottom: 0.3em;
+    font-weight: 800;
+    margin-bottom: 0.3em;
 }
 
 dd + dt {
-	margin-top: 0.5em;
+    margin-top: 0.5em;
 }
 
 blockquote {
-	font-style: italic;
-	line-height: 1.5;
-	margin: 0;
-	padding: 10px 10px 16px 10px;
-	border-top: 1px solid #aaa;
-	border-bottom: 1px solid #aaa;
+    font-style: italic;
+    line-height: 1.5;
+    margin: 0;
+    padding: 10px 10px 16px 10px;
+    border-top: 1px solid #aaa;
+    border-bottom: 1px solid #aaa;
 }
 
 table {
-	width: 100%;
+    width: 100%;
 }
 
-td, th {
-	vertical-align: top;
+td,
+th {
+    vertical-align: top;
 }
 
 /*
@@ -283,7 +290,7 @@ IMAGES
 */
 
 img {
-	width: 100%;
+    width: 100%;
 }
 
 /*
@@ -293,157 +300,163 @@ CLASSES FOR SPECIAL LAYOUT/TYPOGRAPHY
 */
 
 .centered {
-	text-align: center;
+    text-align: center;
 }
 
 .right {
-	text-align: right;
+    text-align: right;
 }
 
 .justify {
-	text-align: justify;
-		-webkit-hyphens: auto;
-		-moz-hyphens: auto;
-		-ms-hyphens: auto;
-	hyphens: auto;
+    text-align: justify;
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
 }
 
 .medium {
-	font-size: 26px;
+    font-size: 26px;
 }
 
 .small {
-	font-size: 22px;
+    font-size: 22px;
 }
 
 .x-small {
-	font-size: 18px;
+    font-size: 18px;
 }
 
 .skip {
-	display: none;
+    display: none;
 }
 
 .underline {
-	border-bottom: 1px solid #333;
+    border-bottom: 1px solid #333;
 }
 
 .dotted {
-	border-bottom: 1px dotted #333;
+    border-bottom: 1px dotted #333;
 }
 
 .red {
-	color: #C00000;
+    color: #C00000;
 }
 
 .outline {
-	outline: 1px solid #333;
-	padding-left: 0.2em;
-	padding-right: 0.2em;
+    outline: 1px solid #333;
+    padding-left: 0.2em;
+    padding-right: 0.2em;
 }
 
 .up-25 {
-	margin-top: -25px;
+    margin-top: -25px;
 }
 
 .up-50 {
-	margin-top: -50px;
+    margin-top: -50px;
 }
 
 .up-75 {
-	margin-top: -75px;
+    margin-top: -75px;
 }
 
 .up-100 {
-	margin-top: -100px;
+    margin-top: -100px;
 }
 
-.down-25, .before-25 {
-	margin-top: 25px;
+.down-25,
+.before-25 {
+    margin-top: 25px;
 }
 
-.down-50, .before-50 {
-	margin-top: 50px;
+.down-50,
+.before-50 {
+    margin-top: 50px;
 }
 
-.down-75, .before-75 {
-	margin-top: 75px;
+.down-75,
+.before-75 {
+    margin-top: 75px;
 }
 
-.down-100, .before-100 {
-	margin-top: 100px;
+.down-100,
+.before-100 {
+    margin-top: 100px;
 }
 
 .after-25 {
-	margin-bottom: 25px;
+    margin-bottom: 25px;
 }
 
 .after-50 {
-	margin-bottom: 50px;
+    margin-bottom: 50px;
 }
 
 .after-75 {
-	margin-bottom: 75px;
+    margin-bottom: 75px;
 }
 
 .after-100 {
-	margin-bottom: 100px;
+    margin-bottom: 100px;
 }
 
 .pull-25 {
-	margin-bottom: -25px;
+    margin-bottom: -25px;
 }
 
 .pull-50 {
-	margin-bottom: -50px;
+    margin-bottom: -50px;
 }
 
 .pull-75 {
-	margin-bottom: -75px;
+    margin-bottom: -75px;
 }
 
 .pull-75 {
-	margin-bottom: -100px;
+    margin-bottom: -100px;
 }
 
 .even-left {
-	margin-left: 0;
+    margin-left: 0;
 }
 
 .even-right {
-	margin-right: 0;
+    margin-right: 0;
 }
 
 .line-height-one {
-	line-height: 1;
+    line-height: 1;
 }
 
 .line-height-one-two-five {
-	line-height: 1.25;
+    line-height: 1.25;
 }
 
 .line-height-one-five {
-	line-height: 1.5;
+    line-height: 1.5;
 }
 
 .line-height-two {
-	line-height: 2;
+    line-height: 2;
 }
 
 .no-margins {
-	margin: 0;
+    margin: 0;
 }
 
 .highlight {
-	background: #FFEF00;
-	padding-left: 0.2em;
-	padding-right: 0.2em;
+    background: #FFEF00;
+    padding-left: 0.2em;
+    padding-right: 0.2em;
 }
 
-.gh-icon, .twitter-icon {
-	position: relative;
-	top: 5px; width:
-	30px;
+.gh-icon,
+.twitter-icon {
+    position: relative;
+    top: 5px;
+    width: 
+    30px;
 }
 
 /*
@@ -455,108 +468,204 @@ STYLES FOR INCLUDED LIBRARIES
 /* HIGHLIGHT.JS */
 
 pre code {
-	background-color: inherit;
-	padding: 0 2em;
+    background-color: inherit;
+    padding: 0 2em;
 }
 
 code {
-	font-family: monospace;
+    font-family: monospace;
 }
 
 code.hljs {
-	font-size: 20px;
-	line-height: 24px;
-	padding-left: 1em;
+    font-size: 20px;
+    line-height: 24px;
+    padding-left: 1em;
 }
 
 .hljs + .numbering {
-	padding: 10px 6px;
-	background: #f7f7f7;
+    padding: 10px 6px;
+    background: #f7f7f7;
 }
 
 .hljs + ul.numbering li {
-	font-size: 18px;
-	line-height: 24px;
+    font-size: 18px;
+    line-height: 24px;
 }
 
 .hljs + ul li::before {
-	margin-right: 0;
+    margin-right: 0;
 }
 
 /* CODEMIRROR */
 
 .CodeMirror {
-	background: #f1f1f1 none repeat scroll 0 0;
-	border: 1px solid #e1e1e1;
-	border-radius: 4px;
-	display: block;
-	font-size: 18px;
-	line-height: 26px;
-	margin: 0 0.2rem;
-	white-space: nowrap;
-	height: auto;
+    background: #f1f1f1 none repeat scroll 0 0;
+    border: 1px solid #e1e1e1;
+    border-radius: 4px;
+    display: block;
+    font-size: 18px;
+    line-height: 26px;
+    margin: 0 0.2rem;
+    white-space: nowrap;
+    height: auto;
 }
 
 .CodeMirror-linenumber {
-	color: #333;
+    color: #333;
 }
 
 .cm-iri-ref {
-	color: #085;
+    color: #085;
 }
 
 .cm-atom-2 {
-	color: #f50;
+    color: #f50;
 }
 
 /* SPARQL color classes */
 
 .subject-background {
-	background: #81d4fa;
+    background: #81d4fa;
 }
 
 .predicate-background {
-	background: #ff8a65;
+    background: #ff8a65;
 }
 
 .object-background {
-	background: #a5d6a7;
+    background: #a5d6a7;
 }
 
-.subject-color, .subject:before {
-	color: #0277bd;
+.subject-color,
+.subject:before {
+    color: #0277bd;
 }
 
-.predicate-color, .predicate:before {
-	color: #ff6d00;
+.predicate-color,
+.predicate:before {
+    color: #ff6d00;
 }
 
-.object-color, .object:before {
-	color: #2e7d32;
+.object-color,
+.object:before {
+    color: #2e7d32;
 }
 
 /* CHARTIST */
 
 text {
-	font-size: 14px;
+    font-size: 14px;
 }
 
 .ct-label {
-	color: #333;
-	font-size: 14px;
+    color: #333;
+    font-size: 14px;
 }
 
 /* SKELETON grid example */
 
-.example-grid .column, .example-grid .columns {
-	background: #eee none repeat scroll 0 0;
-	border-radius: 4px;
-	font-size: 1rem;
-	font-weight: 600;
-	height: 30px;
-	letter-spacing: 0.1rem;
-	line-height: 30px;
-	margin-bottom: 0.75rem;
-	text-align: center;
-	text-transform: uppercase;
+.example-grid .column,
+.example-grid .columns {
+    background: #eee none repeat scroll 0 0;
+    border-radius: 4px;
+    font-size: 1rem;
+    font-weight: 600;
+    height: 30px;
+    letter-spacing: 0.1rem;
+    line-height: 30px;
+    margin-bottom: 0.75rem;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+/*  slightly modified from impress-demo.css  (works only in firefox ? */
+
+.hint {
+    /*
+        We hide the hint until presentation is started and from browsers not supporting
+        impress.js, as they will have a linear scrollable view ...
+    */
+    display: none;
+
+    /*
+        ... and give it some fixed position and nice styles.
+    */
+    /* kol: position: fixed; */
+    left: 0;
+    right: 0;
+    /*  bottom: 200px; */
+    background: rgba(0, 0, 0, 0.15);
+    color: white;
+    text-align: left;
+    font-size: 1em;
+    padding: 0.4em;
+    z-index: 100;
+
+    /*
+        By default we don't want the hint to be visible, so we make it transparent ...
+    */
+    opacity: 0;
+
+    /*
+        ... and position it below the bottom of the screen (relative to it's fixed position)
+    */
+    -webkit-transform: translateY(400px);
+    -moz-transform: translateY(400px);
+    -ms-transform: translateY(400px);
+    -o-transform: translateY(400px);
+    transform: translateY(400px);
+
+    /*
+        Now let's imagine that the hint is visible and we want to fade it out and move out
+        of the screen.
+
+        So we define the transition on the opacity property with 1s duration and another
+        transition on transform property delayed by 1s so it will happen after the fade out
+        on opacity finished.
+
+        This way user will not see the hint moving down.
+    */
+    -webkit-transition: opacity 1s, -webkit-transform 0.5s 1s;
+    -moz-transition: opacity 1s, -moz-transform 0.5s 1s;
+    -ms-transition: opacity 1s, -ms-transform 0.5s 1s;
+    -o-transition: opacity 1s, -o-transform 0.5s 1s;
+    transition: opacity 1s, transform 0.5s 1s;
+}
+
+/*
+    Now we 'enable' the hint when presentation is initialized ...
+*/
+.impress-enabled .hint {
+    display: block
+}
+
+/*
+    ... and we will show it when the first step (with id 'start') is active.
+*/
+.impress-on-start .hint {
+    /*
+        We remove the transparency and position the hint in its default fixed
+        position.
+    */
+    opacity: 1;
+
+    -webkit-transform: translateY(0px);
+    -moz-transform: translateY(0px);
+    -ms-transform: translateY(0px);
+    -o-transform: translateY(0px);
+    transform: translateY(0px);
+
+    /*
+        Now for fade in transition we have the oposite situation from the one
+        above.
+
+        First after 4.5s delay we animate the transform property to move the hint
+        into its correct position and after that we fade it in with opacity
+        transition.
+    */
+    -webkit-transition: opacity 1s 5s, -webkit-transform 0.5s 4.5s;
+    -moz-transition: opacity 1s 5s, -moz-transform 0.5s 4.5s;
+    -ms-transition: opacity 1s 5s, -ms-transform 0.5s 4.5s;
+    -o-transition: opacity 1s 5s, -o-transform 0.5s 4.5s;
+    transition: opacity 1s 5s, transform 0.5s 4.5s;
 }
